--- a/project.json
+++ b/project.json
@@ -1,14 +1,24 @@
 {
-  "buildOptions": {
+ "buildOptions": {
+    "preserveCompilationContext": true,
     "emitEntryPoint": true,
     "debugType": "portable"
+  },
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "Views"
+    ]
   },
   "dependencies": {
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
     },
+    "Microsoft.AspNetCore.Diagnostics": "1.0.0",
+    "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.Mvc.Core": "1.0.0",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.AspNetCore.Mvc.Formatters.Json": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
